--- a/index.html
+++ b/index.html
@@ -17,12 +17,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Thediveo.github.io</h1>
-        <p>TheDiveO user web page repository</p>
-        <p class="view"><a href="https://github.com/TheDiveO">View the Project on GitHub <small>TheDiveO</small></a></p>
-        <ul>
-          <li class="single"><a href="https://github.com/TheDiveO/thediveo.github.io">View On <strong>GitHub</strong></a></li>
-        </ul>
+        <h1>TheDiveO</h1>
+        <p>a boooring user web page </p>
       </header>
       <section>
         <h1>
