--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
         <p>a boooring user web page </p>
       </header>
       <section>
-        <h1>
-<a name="thediveo-user-page" class="anchor" href="#thediveo-user-page"><span class="octicon octicon-link"></span></a>TheDiveO User Page</h1>
+<h2>GitHub Projects</h2>
 
 <ul>
 <li>Font Awesome for TiddlyWiki 5</li>
