added links to my static project web pages; added some CSS sugar; added FontAwesome awww :)

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/thediveo.css" media="screen">
     <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
@@ -18,15 +20,21 @@
     <div class="wrapper">
       <header>
         <h1>TheDiveO</h1>
-        <p>a boooring user web page </p>
+        <p>a boooring developer page </p>
       </header>
       <section>
-<h2>GitHub Projects</h2>
 
-<ul>
-<li>Font Awesome for TiddlyWiki 5</li>
-<li>Hierarchical File System Adapter for TiddlyWiki 5</li>
-</ul>
+	  <h2>My <span class="nb"><i class="fa fa-github"></i> GitHub</span> Projects</h2>
+
+	  <ul class="plugins">
+
+		<li><a href="./TW5FontAwesome">Font Awesome plugin</a> for using the Font Awesome in TiddlyWiki&nbsp;5.</li>
+
+		<li><a href="./ThirdFlow">ThirdFlow plugin</a> for developing customizing plugins
+		<i>for</i> and <i>in</i> TiddlyWiki&nbsp;5.</li>
+
+	  </ul>
+
       </section>
     </div>
     <footer>
