--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 
 	  <h2>My <span class="nb"><i class="fa fa-github"></i> GitHub</span> Projects</h2>
 
+	  <ul>
+	  	<li>The <a href="./KdenliveProjectAnalyzer">Kdenlive Project Analyzer</a>. A crazy HTML5-XSLT markup sallad.</li>
+	  </ul>
+
 	  <ul class="plugins">
 
 		<li><a href="./TW5FontAwesome">Font Awesome plugin</a> for using the Font Awesome in TiddlyWiki&nbsp;5.</li>
