--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 	  <h2>My <span class="nb"><i class="fa fa-github"></i> GitHub</span> Projects</h2>
 
-	  <ul>
+	  <ul class="kdenlive">
 	  	<li>The <a href="./KdenliveProjectAnalyzer">Kdenlive Project Analyzer</a>. A crazy HTML5-XSLT markup sallad.</li>
 	  </ul>
 
