--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 	  <h2>My <span class="nb"><i class="fa fa-github"></i> GitHub</span> Projects</h2>
 
 	  <ul class="kdenlive">
-	  	<li>The <a href="./KdenliveProjectAnalyzer">Kdenlive Project Analyzer</a>. A crazy HTML5-XSLT markup sallad.</li>
+	  	<li>The <a href="./KdenliveProjectAnalyzer">Kdenlive Project Analyzer</a>. A crazy HTML5-XSLT combo
+	  	for analyzing Kdenlive project XML files.</li>
 	  </ul>
 
 	  <ul class="plugins">
