added link to kdenlive-post-render-script project

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 	  <ul class="kdenlive">
 	  	<li>The <a href="./kdenlive-project-analyzer">Kdenlive Project Analyzer</a>. A crazy HTML5-XSLT combo
 	  	for analyzing Kdenlive project XML files.</li>
+        <li>The <a href="https://github.com/TheDiveO/kdenlive-post-render-script">Kdenlive Post-Render Script</a> for adding meta data and cover art to
+          MP4 video files.</li>
 	  </ul>
 
 	  <ul class="plugins">
